make ui proper and final    complae series

--- a/11-mega-blog/Mega_Blog/index.html
+++ b/11-mega-blog/Mega_Blog/index.html
@@ -1,13 +1,32 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+
+  <!-- ✅ FAVICON -->
+  <link rel="icon" type="image/svg+xml" href="/icon.svg" />
+
+  <!-- ✅ APP NAME -->
+  <title>Blogzilla 🦖</title>
+
+  <!-- ✅ RESPONSIVE -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- ✅ SEO (optional but recommended) -->
+  <meta name="description" content="Blogzilla – A modern blogging platform built with React & Appwrite." />
+
+  <!-- ✅ Social preview (optional) -->
+  <meta property="og:title" content="Blogzilla" />
+  <meta property="og:description" content="Write, share, and explore blogs with Blogzilla." />
+  <meta property="og:type" content="website" />
+</head>
+
+<body>
+  <!-- React mounts here -->
+  <div id="root"></div>
+
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
